ecmascript/parser/tests/test262-error-references/fail/5fae862d7fe6531c.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/5fae862d7fe6531c.js:1:20
  |
1 | ({a = 0}, {a = 0}, 0) => 0
  |                    ^

